# latin-nlp-utilities

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_sources/: quickstart.md.txt
_sources/api_reference/: constants.rst.txt  evaluation.rst.txt  io.rst.txt  utils.rst.txt  validation.rst.txt
_sources/examples/: evaluation.md.txt  index.rst.txt  io.md.txt  matching.md.txt  normalization.md.txt
_sources/user_guide/: conversion.md.txt  evaluation.md.txt  index.rst.txt  loading.md.txt
api_reference/: constants.html  evaluation.html  index.html  io.html  matching.html  utils.html  validation.html
conllu_tools/: __init__.py  constants.py
conllu_tools/data/: dalme_features.json  deprels.json
conllu_tools/evaluation/: evaluator.py  helpers.py  word_processing.py
conllu_tools/io/: __init__.py  brat_to_conllu.py  conllu_to_brat.py  loaders.py
conllu_tools/matching/: __init__.py  condition.py  result.py  sentence.py  token.py  utils.py
conllu_tools/utils/: __init__.py  brat.py  features.py  normalization.py  upos.py
conllu_tools/validation/: __init__.py  character_constraints.py  enhanced_deps.py  feature_format.py  functional_leaves.py  helpers.py  misc_column.py  structural_constraints.py  upos_deprel_compatibility.py  validator.py
docs/: .gitignore  Makefile
docs/source/: conf.py  index.rst  installation.md  quickstart.md
examples/: evaluation.html  index.html  io.html  matching.html  normalization.html  utils.html  validation.html
latin_utilities/: __init__.py  brat2conllu.py  conllu2brat.py  conllubio2brat.py  evaluate_conllu.py  utils.py  validate_conllu.py
latin_utilities/converters/: dalmepos_to_upos.py  upos_to_perseus.py
latin_utilities/tests/: conftest.py  test_brat2conllu.py  test_conllubio2brat.py  test_dalmepos_to_upos.py  test_evaluate_conllu.py  test_ittb_converters.py  test_proiel_converters.py  test_upos_to_perseus.py  test_utils.py  test_validate_conllu.py
nlp_utilities/: constants.py  loaders.py  normalizers.py  validators.py
nlp_utilities/brat/: __init__.py  brat_to_conllu.py  conllu_to_brat.py  utils.py
nlp_utilities/converters/: features.py
nlp_utilities/data/: auxiliaries.json  feats.json
tests/: __init__.py  conftest.py
tests/brat/: __init__.py  conftest.py
tests/conllu/: conftest.py
tests/converters/: test_dalme_to_upos.py  test_feature_dict_to_string.py  test_feature_string_to_dict.py  test_features_converters.py  test_features_to_xpos.py  test_format_xpos.py  test_ittb_converters.py  test_ittb_to_perseus_integration.py  test_llct_converters.py  test_proiel_converters.py  test_proiel_to_perseus_integration.py  test_upos_to_perseus.py
tests/evaluation/: __init__.py  conftest.py  test_alignment.py  test_alignment_helpers.py  test_all_tags_scoring.py  test_blex_scoring.py  test_char_array_conversion.py  test_clas_scoring.py  test_deprel_normalization_helper.py  test_enhanced_dependency_processing.py  (+31 more)
user_guide/: conversion.html  evaluation.html  index.html  loading.html  matching.html  utils.html  validation.html
utilities/: __init__.py  brat2conllu.py  utils.py  validate_conllu.py
(+371 files in other folders)
